# ChangeLog for net-libs/libhttpd-persistent
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libhttpd-persistent/Attic/ChangeLog,v 1.8 2004/07/05 07:15:07 eradicator Exp $

  04 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild:
  just discard borked upstream Makefile and do it in ebuild...

  05 Jul 2004; Danny van Dyk <kugelfang@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild:
  Tidied up the build process for the shared object. Works now on amd64.

  04 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild:
  ~sparc and added || dies

  29 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild:
  Stable x86.

  31 Mar 2004; David Holm <dholm@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild:
  Added to ~ppc.

*libhttpd-persistent-1.3p-r6 (30 Mar 2004)

  30 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libhttpd-persistent-1.3p-r6.ebuild, metadata.xml:
  Added to portage.

  03 Dec 2003; Sandy McArthur <sandymac@gentoo.org> libhttpd-persistent-1.3p-r6.ebuild :
  New upstream release: libhttpd-persistent (bugfix version f). Changes in this release
  are: "Renamed libhttpd to libhttpd-persistent to allow both versions to be installed
  at the same time. This became neccessary because libhttpd-persistent turned out to be
  incompatible to the old version."

*libhttpd-persistent-1.3p-r5 (25 Nov 2003)

  25 Nov 2003; Sandy McArthur <sandymac@gentoo.org> libhttpd-persistent-1.3p-r5.ebuild :
  Created ebuild for libhttpd-persistent-1.3p-e which patched the Site.mm file
  to allow this verion to compile on Gentoo. Release -e is a bugfix release.

*libhttpd-persistent-1.3p-r4 (24 Nov 2003)

  24 Nov 2003; Sandy McArthur <sandymac@gentoo.org> :
  Initial import.  Ebuild submitted by Sandy McArthur <sandymac@gentoo.org>.