@@ -1,4 +1,6 @@
 MD5 6cf13053c2b165c1b5bf55de46c614fb ChangeLog 1996
 MD5 4549c381890e5ec90b78241bcbaa4d36 libhttpd-persistent-1.3p-r6.ebuild 1424
 MD5 34371b0b6264e8222d4666bf5895f5f7 metadata.xml 432
+MD5 43a1e56eea45718371b4200e870988e3 libhttpd-persistent-1.3p-r7.ebuild 1432
 MD5 3d54fde5d128291ea5a6ae6dd4f9d840 files/digest-libhttpd-persistent-1.3p-r6 64
+MD5 a43bd699e47de8bf6404b07890394b13 files/digest-libhttpd-persistent-1.3p-r7 64
